# loci-playground

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  build.sh  setup.ps1  setup.sh
cjson/: CMakeLists.txt
demo/: CMakeLists.txt  main.c
littlefs/: CMakeLists.txt
micro-ecc/: CMakeLists.txt
printf/: CMakeLists.txt
tinycrypt/: CMakeLists.txt
toolchain/: cortex-m4-tiarmclang.cmake
